tests/negative/test_cn_asgn_cn_data.orb
data Foo {
    i32 x;
}

fnc makeFoo() Foo {
    Foo f;
    ret f;
}

fnc main() {
    Foo cn f1 = makeFoo();
    Foo f2;
    f1 = f2;
}